@@ -6,6 +6,7 @@ Date: ????
     - Visual enhancements
     - Clear renderings when the exiting vehicle
     - Figure out how to rotate along with the wagon
+    - Use config based rendering
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 07. 25
